# vibearound

./: .gitignore  .gitmodules  README.md  README_CN.md
src/core/: Cargo.toml
src/core/src/: agent_availability.rs  agent_detection.rs  agent_integrations.rs  agent_state.rs  archive.rs  auth.rs  config.rs  env.rs  launch_sessions.rs  lib.rs  logging.rs  pickup_codes.rs  plugins.rs  preview_entries.rs  resources.rs  routing.rs  search.rs  service.rs  state.rs  toolchain.rs  tunnels.rs
src/core/src/acp/: errors.rs  mod.rs  routing.rs  sdk.rs  transport.rs
src/core/src/acp_hub/: mod.rs  pod.rs
src/core/src/acp_hub/pod/: bridge.rs  mod.rs
src/core/src/agent/: bridge.rs  install.rs  launch.rs  mcp.rs  mod.rs  runtime.rs  skills.rs
src/core/src/agent_factory/: mod.rs  provider.rs
src/core/src/agent_manager/: mod.rs  provider.rs  runtime.rs
src/core/src/agent_manager/agents/: mod.rs  runtime_context.rs
src/core/src/agent_manager/providers/: claude.rs  codex.rs  gemini.rs  mod.rs  opencode.rs
src/core/src/auth/: mod.rs  pair.rs  token.rs
src/core/src/channel_manager/: bridge_handler.rs  manifest.rs  mod.rs  monitor.rs  plugin_host.rs  plugin_runtime.rs  transport_stdio.rs  transport_websocket.rs
src/core/src/channel_manager/prompt/: handler.rs  handover.rs  mod.rs  mode.rs
src/core/src/channel_manager/transport_stdio/: bridge.rs  forwarder.rs  handler.rs  mod.rs  runtime.rs
src/core/src/channels/: agent_protocol.rs  bridge_handler.rs  manifest.rs  mod.rs  monitor.rs  outbox.rs  plugin_bridge.rs  plugin_host.rs  plugin_runtime.rs  slash.rs  subagent_handler.rs  transport_websocket.rs  types.rs
src/core/src/channels/monitor/: state.rs
src/core/src/channels/prompt/: handler.rs  handover.rs  mod.rs  mode.rs
src/core/src/channels/transport_stdio/: bridge.rs  forwarder.rs  handler.rs  mod.rs  runtime.rs
src/core/src/conversation_manager/: event.rs  mod.rs
src/core/src/conversation_manager/conversation/: handover_handler.rs  lifecycle.rs  media.rs  mod.rs  state.rs
src/core/src/conversation_manager/handover/: mod.rs
src/core/src/conversations/: event.rs  mod.rs  session_log.rs
src/core/src/conversations/conversation/: lifecycle.rs  media.rs  mod.rs  session_mode.rs  state.rs
src/core/src/conversations/handover/: handler.rs  mod.rs
src/core/src/launch_sessions/: archive.rs  claude.rs  codex.rs  cursor.rs  gemini.rs  mod.rs  opencode.rs  pi.rs  qwen.rs
src/core/src/plugins/: channel.rs  mod.rs
src/core/src/preview_entries/: mod.rs  store.rs
src/core/src/previews/: kill.rs  mod.rs  store.rs  types.rs
src/core/src/process/: acp_transport.rs  bridge.rs  env.rs  error.rs  kill.rs  log.rs  mod.rs  registry.rs  supervisor.rs
src/core/src/profiles/: bridge_launch.rs  catalog.rs  codex_metadata.rs  endpoint_url.rs  google_oauth.rs  headers.rs  mod.rs  pi_launch.rs  proxy_launch.rs  render.rs  runtime.rs  schema.rs
src/core/src/profiles/connections/: legacy.rs  mod.rs  tests.rs
src/core/src/pty/: manager.rs  mod.rs  runtime.rs  session.rs
src/core/src/runtime_status/: mod.rs
src/core/src/service/: mod.rs  snapshot.rs
src/core/src/session_hub/: command.rs  mod.rs  routing.rs  state.rs
src/core/src/storage/: jsonl.rs  mod.rs
src/core/src/tunnel_manager/providers/: cloudflare.rs  localtunnel.rs
src/core/src/tunnels/: manager.rs  mod.rs  status.rs
src/core/src/tunnels/providers/: cloudflare.rs  localtunnel.rs  mod.rs  ngrok.rs
src/core/src/workspace/: context_transfer.rs  handoff.rs  manager.rs  mod.rs  registry.rs  store.rs
src/desktop/: Cargo.toml  package.json  tauri.conf.json
src/desktop/capabilities/: default.json
src/desktop/icons/: icon.icns
src/desktop/src/: agent_detection.rs  desktop_detection.rs  main.rs  onboarding.rs  tray.rs
src/desktop/src/onboarding/: agent_integrations.rs  mod.rs  plugin_install.rs  plugin_manager.rs  plugin_session.rs  search_settings.rs
src/desktop/src/profiles/: catalog.rs  connections.rs  launcher.rs  mod.rs  preferences.rs  render.rs  schema.rs  sessions.rs  store.rs  summary.rs  terminal.rs  test_connection.rs  workspace.rs
src/desktop/src/startkit/: agent.rs  channels.rs  managed.rs  mod.rs  plan.rs  redact.rs  script.rs
src/server/: Cargo.toml  README.md
src/server/src/: agent_hooks.rs  api_types.rs  boot.rs  lib.rs  main.rs
src/server/src/openai_bridge/: chat_to_responses.rs  error.rs  mod.rs  reasoning_blob.rs  responses_to_chat.rs
src/server/src/openai_proxy/: chat_to_responses.rs  error.rs  mod.rs  responses_to_chat.rs  sse.rs
src/server/src/web_server/: agent_hooks.rs  api.rs  api_bridge.rs  api_proxy.rs  auth.rs  bridge_recording.rs  mcp.rs  mod.rs  openai_proxy.rs  pair.rs  preview.rs  ws_chat.rs  ws_domains.rs  ws_pty.rs
(+366 files in other folders)
