[package]
name = "common"
version = "0.5.6"
description = "VibeAround shared logic: PTY, session registry, tunnel, headless CLI, IM (Telegram)"
edition = "2021"
rust-version = "1.82"

[dependencies]
portable-pty = "0.9"
tokio = { version = "1.49", features = ["process", "io-util", "sync", "rt-multi-thread", "time", "fs"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.11", features = ["v4", "serde"] }
dashmap = "6.0"
bytes = "1.9"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
ngrok = "0.18"
url = "2.5"
async-trait = "0.1"
rustls = "0.23"
chrono = "0.4"
agent-client-protocol = "0.9"
tokio-util = { version = "0.7", features = ["compat"] }
anyhow = "1"
thiserror = "1"
toml = "0.8"
toml_edit = "0.22"
rand = "0.8"
nanoid = "0.5"
parking_lot = "0.12"
sysinfo = { version = "0.33", default-features = false, features = ["system"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
include_dir = "0.7"
