[package]
name = "vibearound-desktop"
version = "0.5.12"
description = "VibeAround Desktop — Tray-first AI coding orchestrator"
edition = "2021"
rust-version = "1.82"

[build-dependencies]
tauri-build = { version = "2.5", features = [] }

[dependencies]
common = { path = "../core" }
server = { path = "../server" }
tauri = { version = "2.10", features = ["tray-icon", "image-png"] }
tauri-plugin-shell = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-dialog = "2"
tokio = { version = "1.49", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1"
open = "1.7"
tracing = "0.1"
shell-escape = "0.1"
uuid = { version = "1", features = ["v4"] }
sha2 = "0.10"
toml = "0.8"

[features]
default = []
