[package]
name = "server"
version = "0.5.8"
description = "VibeAround HTTP/WebSocket server: SPA, /ws, /ws/chat, /mcp"
edition = "2021"
rust-version = "1.82"

[[bin]]
name = "vibearound-server"
path = "src/main.rs"

[dependencies]
common = { path = "../core" }
va-ai-api-proxy = { path = "../va-ai-api-proxy" }
axum = { version = "0.8", features = ["json", "ws", "tokio"] }
tower-http = { version = "0.6", features = ["fs", "cors"] }
tokio = { version = "1.49", features = ["full"] }
futures-util = { version = "0.3", default-features = false, features = ["std"] }
bytes = "1.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.11", features = ["v4", "serde"] }
dashmap = "6.0"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream"] }
chrono = "0.4"
agent-client-protocol = "0.9"
async-trait = "0.1"
anyhow = "1"
tracing = "0.1"
